# CytoDraft

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
src/cytodraft/: app.py
src/cytodraft/core/: compensation.py  export.py  fcs_reader.py  gating.py  statistics.py  transforms.py  workspace_io.py
src/cytodraft/gui/: batch_export_dialog.py  compensation_dialog.py  gate_toolbar.py  main_window.py  panels.py  plot_widget.py  sample_table_window.py  theme.py
src/cytodraft/models/: gate.py  sample.py  workspace.py
src/cytodraft/services/: gate_service.py  sample_service.py  statistics_service.py
tests/: test_export.py  test_fcs_reader.py  test_gating.py  test_main_window.py  test_statistics.py  test_transforms.py
