[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytodraft"
version = "0.1.0"
description = "Desktop cytometry analysis app for loading FCS files, visualizing populations, and applying interactive gating."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Emiliano Balderas Ramírez" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PySide6>=6.7",
  "pyqtgraph>=0.13",
  "flowio>=1.3.0",
  "flowutils>=1.1.0",
  "pydantic>=2.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10"
]
interop = [
  "flowkit>=1.2.0"
]

[project.scripts]
cytodraft = "cytodraft.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
